Bug 1368521 Selection::SelectFrames() shouldn't skip first content invalidation if it's different from handled text node r=mats

The first node of |iter| in Selection::SelectFrames() may be different from the start parent of given range.  Therefore, if they are different, it shouldn't skip first item of |iter|.

MozReview-Commit-ID: DgE2dSziaxo

--HG--
extra : rebase_source : b35f52d194bf437cc79d1917ad497ebb1a8c27f0